# 1756-cmee1y1-clients

./: .gitignore  CLAUDE.md  LICENSE  README.md  runprobe.py
c/: .dockerignore  CMakeLists.txt  Dockerfile  README.md  build_image.py  docker-compose.yml  runprobe.py
c/examples/: accessdbtest.c  actnodes.c  connexp.c  connidentity.c  conntest.c  discover.c  dummy.c  dumpsym.c  errstr.c  findtags.c  identity.c  idstatus.c  modutil.c  msgprobe.c  msgprobe_routed.c  multitagtest.c  pathprobe.c  pooltest.c  routedident.c  structprobe.c  structrwtest.c  symcache.c  symprobe.c  tagtest.c  testtagver.c  typetest.c  udtinfo.c  udtprobe.c  udtprobe2.c  wctime.c
c/include/: bpclient.h
c/src/: access.c  accessdb.c  client.c  conn.c  errors.c  identity.c  message.c  module.c  multitag.c  path.c  pool.c  proto.h  route.c  struct.c  tagcache.c  tagdb.c  wctime.c
docs/: access-tag-data-db.md  container-plumbing.md  error-codes.md  protocol.md  tag-types.md  udt.md  v0.8-large-buffer-re.md  v0.8-phase-a-findings.md
go/: Dockerfile  README.md  build_image.py  go.mod
go/cmd/accessdbtest/: main.go
go/cmd/actnodes/: main.go
go/cmd/connidentity/: main.go
go/cmd/conntest/: main.go
go/cmd/dummy/: main.go
go/cmd/errstr/: main.go
go/cmd/identity/: main.go
go/cmd/idstatus/: main.go
go/cmd/modutil/: main.go
go/cmd/msgprobe/: main.go
go/cmd/multitagtest/: main.go
go/cmd/pathprobe/: main.go
go/cmd/pooltest/: main.go
go/cmd/routedident/: main.go
go/cmd/structrwtest/: main.go
go/cmd/symcache/: main.go
go/cmd/tagtest/: main.go
go/cmd/typetest/: main.go
go/cmd/wctime/: main.go
go/ocxbp/: access.go  access_arrays.go  accessdb.go  cip_error_test.go  client.go  conn.go  errors.go  identity.go  message.go  module.go  multitag.go  pool.go  struct.go  struct_test.go  tagcache.go  tagdb.go  wctime.go
go/ocxbp/cip/: access.go  accessdb.go  conn.go  identity.go  message.go  module.go  opcodes.go  pathprobe.go  route.go  route_test.go  session.go  tagdb.go
go/ocxbp/shm/: call.go  consts.go  posix_sem.go  posix_sem_stub.go  shm.go
python/: Dockerfile  README.md  build_image.py  pyproject.toml
python/examples/: accessdbtest.py  actnodes.py  connidentity.py  conntest.py  dummy.py  errstr.py  identity.py  idstatus.py  modutil.py  msgprobe.py  multitagtest.py  pathprobe.py  pooltest.py  routedident.py  structrwtest.py  symcache.py  tagtest.py  typetest.py  wctime.py
python/src/bpclient/: __init__.py  _conn_wire.py  _ipc.py  _proto.py  _route.py  access.py  client.py  conn.py  errors.py  identity.py  message.py  struct.py  tagdb.py
python/tests/: test_cip_error.py  test_ipc_open.py  test_pool_reopen.py  test_read_tags.py  test_route.py  test_slot_dispatch.py  test_struct.py  test_tagcache.py  test_tagtest_e2e.py  test_write_tags.py
